# mechvibes-dx

./: Cargo.toml  DEVELOPMENT.md  build.rs
.cursor/rules/: keep-overview-updated.mdc  project-overview.mdc
soundpacks/keyboard/cherrymx-black-abs/: config.json
soundpacks/keyboard/cherrymx-black-pbt/: config.json
soundpacks/keyboard/cherrymx-blue-abs/: config.json
soundpacks/keyboard/cherrymx-blue-pbt/: config.json
soundpacks/keyboard/cherrymx-brown-abs/: config.json
soundpacks/keyboard/cherrymx-brown-pbt/: config.json
soundpacks/keyboard/cherrymx-red-abs/: config.json
soundpacks/keyboard/eg-crystal-purple/: config.json
soundpacks/keyboard/eg-oreo/: config.json
soundpacks/keyboard/topre-purple-hybrid-pbt/: config.json
src/: main.rs
src/components/: app_info.rs  device_selector.rs  dock.rs  header.rs  logo.rs  soundpack_selector.rs  theme_toggler.rs  titlebar.rs  volume_slider.rs  window_controller.rs
src/components/pages/: customize.rs  home.rs  mod.rs  mood.rs  settings.rs  soundpacks.rs
src/components/ui/: collapse.rs  color_picker.rs  confirm_delete_modal.rs  page_header.rs  progress_step.rs  soundpack_import_modal.rs  soundpack_manager.rs  soundpack_table.rs  toggler.rs
src/libs/: device_manager.rs  evdev_input_listener.rs  focused_input_listener.rs  input_device_manager.rs  input_listener.rs  input_manager.rs  mod.rs  protocol.rs  routes.rs  tray.rs  tray_service.rs  ui.rs  window_manager.rs
src/libs/audio/: ambiance_player.rs  audio_context.rs  mod.rs  music_player.rs  sound_channel.rs  sound_manager.rs  sound_processor.rs  soundpack_loader.rs
src/state/: ambiance.rs  app.rs  config.rs  manifest.rs  mod.rs  music.rs  paths.rs  soundpack.rs  themes.rs
src/utils/: auto_startup.rs  auto_updater.rs  config.rs  config_converter.rs  constants.rs  data.rs  mod.rs  path.rs  soundpack.rs  soundpack_installer.rs  spacing.rs  theme.rs  time.rs
(+11 files in other folders)
